Mixins, Deobfuscation & Conversion (#50)